# blackhole_os

./: .gitignore  65c02.txt  CMakeLists.txt  LICENSE  README.md  description.txt  minbrainf.blkhl
examples/: evthzn.hex  helloworld.blkhl  minbrainf.blkhl  minforth.blkhl  test.blkhl
src/: EVTHZN.AS  EVTHZN2.AS  assembler.cpp  emulator.cpp  translator.cpp
